tests/NormalTests/paczka1/small_fuzzy/13511723.err
Error in line 6: b2X A877 71,9
Error in line 7: Pt1kePHbzYf S653 94,6
Error in line 14: Pt1kePHbzYf A877 31,3
